--- a/courses/an10/homework/ha12.tex
+++ b/courses/an10/homework/ha12.tex
@@ -53,9 +53,8 @@ Beweisen oder widerlegen Sie die folgenden Aussagen:
   Sei nun $\epsilon = \frac{1}{3}$ und $n \in \mathbb{N}_{\geq 1}$ beliebig.
   Aus Satz 5.20 (2) der Vorlesung
   (\emph{``Für $r > 0$ gilt $a < b \iff a^r < b^r$''}) folgt
-  $x^{\frac{1}{n}} < 1^{\frac{1}{n}} = 1$ für $x \in \qty\big(0, 1)$
-  - insbesondere ist $\qty(\frac{1}{2})^{\frac{1}{n}} \in \qty\big(0, 1)$.
-  Somit ist nun $d\qty(f_n\qty(\frac{1}{2}), 0) =
+  $x^{\frac{1}{n}} < 1^{\frac{1}{n}} = 1$ für $x \in \qty\big(0, 1)$.
+  Somit ist nun $d\qty(f_n\qty(\qty(\frac{1}{2})^{\frac{1}{n}}), 0) =
   \abs{\qty(\qty(\frac{1}{2})^{\frac{1}{n}})^n - 0} = \frac{1}{2} > \epsilon$,
   ein Widerspruch.
 
