feat: 2nd part of 3rd task of 11th la10 homework

--- a/courses/la10/homework/ha11.tex
+++ b/courses/la10/homework/ha11.tex
@@ -198,5 +198,32 @@ Sei
   \end{enumerate}
 
   $\Rightarrow$ \underline{$T$ ist linear.}
+
+\item Folgern Sie aus (i) und einem geeigneten Lemma der Vorlesung, dass
+  \[
+    \qty\Big{
+      A \in \mathcal{M}_{n \times n} \qty\big(K)
+      \,{\Big |}\, A = A^t
+    }
+  \]
+  ein Unterraum von $\mathcal{M}_{n \times n} \qty\big(K)$ ist.
+
+  \subparagraph{Lsg.} Nach Lemma 2.14 der Vorlesung ist
+  $\mathcal{M}_{n \times n} \qty\big(K)$ eine Gruppe, somit ist das additive
+  inverse Element eindeutig bestimmt und für
+  $A, B \in \mathcal{M}_{n \times n} \qty\big(K)$ gilt $A - B = 0 \iff A = B$.
+
+  $\Rightarrow \Kern\qty\big(T) = \qty\big{
+      A \in \mathcal{M}_{n \times n} \qty\big(K)
+      \,{\Big |}\, A = A^t
+    }$
+
+  Nach Lemma 6.18 der Vorlesung ist der Kern einer linearen
+  Abbildung $\varphi \colon U \to V$ ein Unterraum von $U$.
+
+  $\Rightarrow$ \underline{$\qty\big{
+      A \in \mathcal{M}_{n \times n} \qty\big(K)
+      \,{\Big |}\, A = A^t
+    }$ ist ein Unterraum von $\mathcal{M}_{n \times n}$.}
 \end{enumerate}
 \end{document}
