fix: \varepsilon -> \mathcal{E}

--- a/courses/la10/homework/ha11.tex
+++ b/courses/la10/homework/ha11.tex
@@ -85,9 +85,10 @@ Sei außerdem
   } = \qty{
     \begin{pmatrix} 1 \\ 0 \end{pmatrix},
     \begin{pmatrix} 0 \\ 1 \end{pmatrix}
-  } = \varepsilon_2$ (die Standardbasis von $\mathbb{R}^2$).
+  } = \mathcal{E}_2$ (die Standardbasis von $\mathbb{R}^2$).
   Da das Bild einer linearen Abbildung nach Lemma 6.18 der Vorlesung
-  ein Unterraum ist, folgt $\Bild\qty\big(f) = \hull{\varepsilon_2} = \mathbb{R}^2$.
+  ein Unterraum ist, folgt
+  $\Bild\qty\big(f) = \hull{\mathcal{E}_2} = \mathbb{R}^2$.
   Da die Basis 2 Elemente hat, folgt weiter $\dim\qty\big(\Bild(f)) = 2$.
 
 \item Finden Sie eine lineare Abbildung $g \colon \mathbb{R}^4 \to \mathbb{R}$,
