feat: 2nd task of 3rd la20 homework

--- a/courses/la20/homework/ha03.tex
+++ b/courses/la20/homework/ha03.tex
@@ -158,4 +158,30 @@
     = -\frac{80}{9}
   \]
 \end{enumerate}
+
+\paragraph{Aufgabe 7} Beweisen Sie Lemma 9.22 (i).
+
+\subparagraph{Lsg.} Zu zeigen ist, dass gilt
+\emph{
+  ``Sei $R$ ein kommutativer Ring, dann ist $aR$ ein Ideal für alle $a \in R$''
+}.
+
+Nun ist $aR$ ein Ideal von $R$, falls
+\begin{enumerate}[(1)]
+\item $0_R \in aR$
+\item $aR + aR \subseteq aR$
+\item $R\qty(aR) \subseteq aR$
+\end{enumerate}
+(1) folgt aus Lemma 2.19 der Vorlesung (\emph{``Sei $R$ mit den binären
+  Operationen $+$ und $\cdot$ ein Ring.
+  Dann gilt $0_R \cdot a = 0_R$ für alle $a \in R$''}).
+
+\noindent
+(2) aus der Distributivität und der additiven
+Abgeschlossenheit des Ringes $R$ folgt für beliebige Elemente $b, c \in R$,
+dass $b + c \in R$ und $a \cdot b + a \cdot c = a \cdot \qty\big(b + c) \in aR$.
+
+\noindent
+(3) Folgt aus der multiplikativen Abgeschlossenheit des Ringes $R$.
+
 \end{document}
