--- a/courses/la20/homework/ha04.tex
+++ b/courses/la20/homework/ha04.tex
@@ -22,7 +22,7 @@
 \usetikzlibrary{patterns}
 \usepgfplotslibrary{fillbetween}
 
-\newcommand{\sgn}{\text{sgn}}
+\newcommand{\Spur}{\text{Spur}}
 
 \author{Karsten Lehmann\\Mat. Nr 4935758}
 \date{SoSe 2022}
@@ -109,5 +109,194 @@ einem Gegenbeispiel.
   $B$.
 
   $\Rightarrow$ die Aussage ist falsch.
+\end{enumerate}
+\newpage
+
+\paragraph{Aufgabe 6}
+\begin{enumerate}[(i)]
+\item Sei $A \in \mathcal{M}_{2 \times 2}\qty\big(\mathbb{R})$, sodass $A$
+  zwei verschiedene Eigenwerte $\lambda_1$ und $\lambda_2$ besitzt.
+  Sei außerdem angenommen, dass $\Spur\qty\big(A) = 7$ und
+  $\det\qty\big(A) = 10$.
+  Bestimmen Sie $\lambda_1$ und $\lambda_2$.
+  Geben Sie außerdem ein konkretes Beispiel für eine Matrix mit den genannten
+  Eigenschaften an.
+
+  \subparagraph{Lsg.} Wie in Beispiel 10.11 der Vorlesung bereits dargelegt, ist
+  das charakteristische Polynom von $A$ als $2 \times 2$ Matrix
+  \begin{flalign*}
+    f_A &= \det\qty\big(XI_n - A) = X^2 - \Spur\qty\big(A)X + \det(A) & \\
+    &= X^2 - 7X + 10 \\
+    &= (X - 2)(X - 5)
+  \end{flalign*}
+  $\Rightarrow \lambda_1 = 2$, $\lambda_2 = 5$
+
+  Ein konkretes Beispiel für eine solche Matrix ist
+  \[
+    A = \begin{pmatrix}
+      6 & 2 \\
+      -2 & 1 \\
+    \end{pmatrix}
+  \]
+  mit
+  \[
+    \begin{pmatrix}
+      6 & 2 \\
+      -2 & 1 \\
+    \end{pmatrix} \cdot \begin{pmatrix}
+      -2 \\
+      1 \\
+    \end{pmatrix} = \begin{pmatrix}
+      -10 \\
+      5 \\
+    \end{pmatrix} = 5 \cdot \begin{pmatrix}
+      -2 \\
+      1 \\
+    \end{pmatrix}
+  \]
+  und
+  \[
+    \begin{pmatrix}
+      6 & 2 \\
+      -2 & 1 \\
+    \end{pmatrix} \cdot \begin{pmatrix}
+      -1 \\
+      2 \\
+    \end{pmatrix} = \begin{pmatrix}
+      -2 \\
+      4 \\
+    \end{pmatrix} = 2 \cdot \begin{pmatrix}
+      -1 \\
+      2 \\
+    \end{pmatrix}
+  \]
+
+\item Bestimmen Sie das charakteristische Polynom und die Eigenwerte der
+  Matrix
+  \[
+    B \coloneqq \begin{pmatrix}
+      0 & 1 \\
+      -1 & -1 \\
+    \end{pmatrix} \in \mathcal{M}_{2 \times 2}\qty\big(\mathbb{F}_7)
+  \]
+  wobei $\mathbb{F}_7 = \mathbb{Z}/7$.
+  Bestimmen Sie für jeden Eigenwert eine Basis des zugehörigen Eigenraums.
+
+  \subparagraph{Lsg.} Es ist
+  \begin{flalign*}
+    f_B &= \det\qty\big(XI_n - B) &\\
+    &= \det(
+    \begin{pmatrix}
+      X & 0 \\
+      0 & X \\
+    \end{pmatrix} - \begin{pmatrix}
+      0 & 1 \\
+      -1 & -1 \\
+    \end{pmatrix}
+    ) \\
+    &= \det(\begin{pmatrix}
+      X & -1 \\
+      1 & X + 1 \\
+    \end{pmatrix}) \\
+    &= X^2 + X + 1 \\
+    &= \qty\big(X - 2)\qty\big(X - 4)
+  \end{flalign*}
+  mit den Eigenwerten $\lambda_1 = 2_{\mathbb{F}_7}$ und $\lambda_2 = 4_{\mathbb{F}_7}$
+  \newpage
+  Nun sei
+  $B = \lambda_1 \cdot I_2 - A = \begin{pmatrix}2 & -1\\1 & 3\end{pmatrix}$
+  und
+  $C = \lambda_2 \cdot I_2 - A = \begin{pmatrix}4 & -1\\1 & 5\end{pmatrix}$
+  Durch Anwendung des Gauß-Verfahrens erhält man
+  \begin{flalign*}
+    \begin{pmatrix}
+      2 & -1 \\
+      1 & 3 \\
+    \end{pmatrix} \overset{Z.1 + 5 \cdot Z.2}\leadsto
+    \begin{pmatrix}
+      0 & 0  \\
+      1 & 3 \\
+    \end{pmatrix}
+  \end{flalign*}
+  $\Rightarrow E(\lambda_1) = \qty{
+    \begin{pmatrix}x \\ y\end{pmatrix} \in \mathbb{F}_7^2
+    \:{\Big |}\: x + 3 \cdot y = 0_{\mathbb{F}_7}
+  } = \qty{
+    \begin{pmatrix}1 \\ 2\end{pmatrix} \cdot v
+    \:{\Big |}\: v \in \mathbb{F}_7
+  }$ und $\begin{pmatrix}5 \\ 6\end{pmatrix}$ ist eine Basis des
+  Eigenraums.
+  \begin{flalign*}
+    \begin{pmatrix}
+      4 & -1 \\
+      1 & 5 \\
+    \end{pmatrix} &\overset{Z.1 + 3 \cdot Z.2}\leadsto
+    \begin{pmatrix}
+      5 & 0 \\
+      1 & 3 \\
+    \end{pmatrix} \\
+    &\overset{2 \cdot Z.2 + Z.1}\leadsto
+    \begin{pmatrix}
+      5 & 0 \\
+      0 & 6 \\
+    \end{pmatrix}
+  \end{flalign*}
+  $\Rightarrow E(\lambda_2) = \qty{
+    \begin{pmatrix}5 \\ 6\end{pmatrix} \cdot v
+    \:{\Big |}\: v \in \mathbb{F}_7
+  }$ und $\begin{pmatrix}5 \\ 6\end{pmatrix}$ ist eine Basis des
+  Eigenraums.
+
+\item Sei
+  \[
+    \varphi \colon \mathbb{R}^2 \to \mathbb{R}^2,
+    \begin{pmatrix}
+      x \\
+      y \\
+    \end{pmatrix} \mapsto \begin{pmatrix}
+      x \\
+      x + 2y \\
+    \end{pmatrix}
+  \]
+  Bestimmen Sie das charakteristische Polynom und die Eigenwerte von $\varphi$.
+  Geben Sie für jeden Eigenwert eine Basis des zugehörigen Eigenraums an.
+
+  \subparagraph{Lsg.} Sei $B$ die Standardbasis von $\mathbb{R}^2$.
+  Dann ist
+  $\text{Mat}\qty\big(\varphi, B) = \begin{pmatrix}1&0\\1&2\end{pmatrix}$.
+  Das charakteristische Polynom ist
+  \begin{flalign*}
+    \det\qty(
+    \begin{pmatrix}
+      X & 0 \\
+      0 & X \\
+    \end{pmatrix} - \begin{pmatrix}
+      1 & 0 \\
+      1 & 2 \\
+    \end{pmatrix}
+    ) &= \det \begin{pmatrix}
+      X - 1 & 0 \\
+      -1 & X - 2 \\
+    \end{pmatrix} \\
+    &= \qty\big(X - 1)\qty\big(X - 2)
+  \end{flalign*}
+  mit den Eigenwerten $\lambda_1 = 1$ und $\lambda_2 = 2$.
+  Nach dem Verfahren aus der vorherigen Aufgabe erhält man
+  $E\qty\big(\lambda_1) = \qty{
+    \begin{pmatrix}
+      1 \\
+      -1 \\
+    \end{pmatrix} \cdot x
+    \:{\Big |}\:
+    x \in \mathbb{R}
+  }$ mit $\begin{pmatrix}1\\-1\end{pmatrix}$ als Basis und
+  $E\qty\big(\lambda_2) = \qty{
+    \begin{pmatrix}
+      0 \\
+      1 \\
+    \end{pmatrix} \cdot x
+    \:{\Big |}\:
+    x \in \mathbb{R}
+  }$ mit $\begin{pmatrix}0\\1\end{pmatrix}$ als Basis.
 \end{enumerate}
 \end{document}
