fix: Syntax of \det

--- a/courses/la20/homework/ha04.tex
+++ b/courses/la20/homework/ha04.tex
@@ -186,7 +186,7 @@ einem Gegenbeispiel.
   \subparagraph{Lsg.} Es ist
   \begin{flalign*}
     f_B &= \det\qty\big(XI_n - B) &\\
-    &= \det(
+    &= \det\qty(
     \begin{pmatrix}
       X & 0 \\
       0 & X \\
@@ -195,10 +195,10 @@ einem Gegenbeispiel.
       -1 & -1 \\
     \end{pmatrix}
     ) \\
-    &= \det(\begin{pmatrix}
+    &= \det\begin{pmatrix}
       X & -1 \\
       1 & X + 1 \\
-    \end{pmatrix}) \\
+    \end{pmatrix} \\
     &= X^2 + X + 1 \\
     &= \qty\big(X - 2)\qty\big(X - 4)
   \end{flalign*}
